# Nitrogen

./: CMakeLists.txt  goal.cl  goal.n  main.cl  main.n  math.n  math.ni  vector2.cl  vector2.n
docs/: spec.md
src/: ast.c  ast.h  ast_debug.c  ast_debug.h  ast_gen.c  ast_gen.h  ast_layout.h  ast_module.c  ast_module.h  block.c  block.h  chunk.c  chunk.h  dependency_graph_gen.c  dependency_graph_gen.h  io.c  io.h  ir.c  ir.h  ir_gen.c  ir_gen.h  lexer.c  lexer.h  main.c  module.c  module.h  module_gen.c  module_gen.h  parser.c  parser.h  register_table.c  register_table.h  signature_gen.c  signature_gen.h  ssa.c  ssa.h  ssa_gen.c  ssa_gen.h  type_declaration_gen.c  type_declaration_gen.h  (+8 more)
stl/: fmath.n  imath.n
